--- a/Religion/Religion.vcproj
+++ b/Religion/Religion.vcproj
@@ -2,11 +2,11 @@
 <VisualStudioProject
 	ProjectType="Visual C++"
 	Version="9.00"
-	Name="gunshoot"
-	ProjectGUID="{8C9AC206-289E-4F73-8BD5-7FF4F5CB7467}"
-	RootNamespace="gunshoot"
+	Name="Religion"
+	ProjectGUID="{EBA836F4-2A3B-4E4B-930B-2F9C24F0FFCA}"
+	RootNamespace="Religion"
 	Keyword="Win32Proj"
-	TargetFrameworkVersion="131072"
+	TargetFrameworkVersion="196613"
 	>
 	<Platforms>
 		<Platform
@@ -44,10 +44,10 @@
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
-				RuntimeLibrary="1"
+				RuntimeLibrary="3"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
+				Detect64BitPortabilityProblems="false"
 				DebugInformationFormat="4"
 			/>
 			<Tool
@@ -61,13 +61,12 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ddraw.lib d3dx9.lib d3d9.lib dsound.lib winmm.lib d3dxof.lib dxguid.lib dxerr9.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib comctl32.lib vfw32.lib easy3d.lib"
+				AdditionalDependencies="ws2_32.lib ddraw.lib d3dx9.lib d3d9.lib dsound.lib winmm.lib d3dxof.lib dxguid.lib dxerr.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib comctl32.lib vfw32.lib easy3d.lib "
+				OutputFile="C:\Users\Taka\Documents\religion\Debug\Religion.exe"
 				LinkIncremental="2"
 				IgnoreDefaultLibraryNames="libci.lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -117,12 +116,13 @@
 			/>
 			<Tool
 				Name="VCCLCompilerTool"
-				FavorSizeOrSpeed="1"
+				Optimization="2"
+				EnableIntrinsicFunctions="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS"
 				RuntimeLibrary="2"
+				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
 			/>
 			<Tool
@@ -136,15 +136,14 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ddraw.lib d3dx9.lib d3d9.lib dsound.lib winmm.lib d3dxof.lib dxguid.lib dxerr9.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib comctl32.lib vfw32.lib easy3d.lib"
+				AdditionalDependencies="ws2_32.lib ddraw.lib d3dx9.lib d3d9.lib dsound.lib winmm.lib d3dxof.lib dxguid.lib dxerr.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib comctl32.lib vfw32.lib easy3d.lib"
+				OutputFile="C:\Users\Taka\Documents\religion\Release\$(ProjectName).exe"
 				LinkIncremental="1"
 				IgnoreDefaultLibraryNames="libci.lib"
 				GenerateDebugInformation="true"
 				SubSystem="2"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				RandomizedBaseAddress="1"
-				DataExecutionPrevention="0"
 				TargetMachine="1"
 			/>
 			<Tool
@@ -179,58 +178,54 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
-				RelativePath=".\gun_enhanc.cpp"
+				RelativePath=".\gamecore.cpp"
 				>
 			</File>
 			<File
-				RelativePath=".\main.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\menu.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\opsmode.cpp"
-				>
-			</File>
-			<File
-				RelativePath=".\rndmov1.cpp"
+				RelativePath=".\winmain.cpp"
 				>
 			</File>
 			<Filter
-				Name="usersys"
+				Name="Class"
 				>
 				<File
-					RelativePath=".\gmsupport.cpp"
+					RelativePath=".\c_batch_preparat.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\usersp1.cpp"
-					>
-				</File>
-			</Filter>
-			<Filter
-				Name="operation"
-				>
-				<Filter
-					Name="duty1"
-					>
-					<File
-						RelativePath=".\ops1main.cpp"
-						>
-					</File>
-				</Filter>
-			</Filter>
-			<Filter
-				Name="loads"
-				>
-				<File
-					RelativePath=".\enemy.cpp"
+					RelativePath=".\ccamera.cpp"
 					>
 				</File>
 				<File
-					RelativePath=".\load.cpp"
+					RelativePath=".\cenemy.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\citem_manipulate.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cmenu.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cplaychara1.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cplaychara2.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cplaychara3.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cstage.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\csys.cpp"
 					>
 				</File>
 			</Filter>
@@ -240,24 +235,48 @@
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
-			<File
-				RelativePath=".\difine.h"
+			<Filter
+				Name="Class"
 				>
-			</File>
-			<File
-				RelativePath=".\resource1.h"
-				>
-			</File>
+				<File
+					RelativePath=".\c_batch_preparat.h"
+					>
+				</File>
+				<File
+					RelativePath=".\ccamera.h"
+					>
+				</File>
+				<File
+					RelativePath=".\cenemy.h"
+					>
+				</File>
+				<File
+					RelativePath=".\citem_manipulate.h"
+					>
+				</File>
+				<File
+					RelativePath=".\clive.h"
+					>
+				</File>
+				<File
+					RelativePath=".\cmenu.h"
+					>
+				</File>
+				<File
+					RelativePath=".\cstage.h"
+					>
+				</File>
+				<File
+					RelativePath=".\csys.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<Filter
 			Name="リソース ファイル"
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
-			<File
-				RelativePath=".\icon1.ico"
-				>
-			</File>
 		</Filter>
 	</Files>
 	<Globals>
