--- a/Religion/Religion.vcproj
+++ b/Religion/Religion.vcproj
@@ -221,11 +221,19 @@
 					>
 				</File>
 				<File
+					RelativePath=".\cplaychara4.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\cstage.cpp"
 					>
 				</File>
 				<File
 					RelativePath=".\csys.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\cweapon1.cpp"
 					>
 				</File>
 			</Filter>
@@ -270,6 +278,10 @@
 					RelativePath=".\csys.h"
 					>
 				</File>
+				<File
+					RelativePath=".\cweapon.h"
+					>
+				</File>
 			</Filter>
 		</Filter>
 		<Filter
@@ -277,6 +289,14 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath="..\Debug\data\img\sys\icon.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\Resource.rc"
+				>
+			</File>
 		</Filter>
 	</Files>
 	<Globals>
