--- a/Religion/Religion.vcxproj
+++ b/Religion/Religion.vcxproj
@@ -61,7 +61,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>Ask.lib;ws2_32.lib;ddraw.lib;d3dx9.lib;d3d9.lib;dsound.lib;winmm.lib;d3dxof.lib;dxguid.lib;dxerr.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;comctl32.lib;vfw32.lib;easy3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;ddraw.lib;d3dx9.lib;d3d9.lib;dsound.lib;winmm.lib;d3dxof.lib;dxguid.lib;dxerr.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;comctl32.lib;vfw32.lib;easy3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>C:\Users\Taka\Documents\religion\Debug\Religion.exe</OutputFile>
       <IgnoreSpecificDefaultLibraries>libci.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -82,7 +82,7 @@
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>gDP.lib;ws2_32.lib;ddraw.lib;d3dx9.lib;d3d9.lib;dsound.lib;winmm.lib;d3dxof.lib;dxguid.lib;dxerr.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;comctl32.lib;vfw32.lib;easy3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ws2_32.lib;ddraw.lib;d3dx9.lib;d3d9.lib;dsound.lib;winmm.lib;d3dxof.lib;dxguid.lib;dxerr.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;comctl32.lib;vfw32.lib;easy3d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>C:\Users\Taka\Documents\religion\Release\$(ProjectName).exe</OutputFile>
       <IgnoreSpecificDefaultLibraries>libci.lib;%(IgnoreSpecificDefaultLibraries)</IgnoreSpecificDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -94,6 +94,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ask.cpp" />
+    <ClCompile Include="cCreature.cpp" />
     <ClCompile Include="ccreature_assist.cpp" />
     <ClCompile Include="citem_manipulate2.cpp" />
     <ClCompile Include="cfirstmenu.cpp" />
@@ -116,6 +117,13 @@
     <ClCompile Include="cweapon.cpp" />
     <ClCompile Include="cweaponload.cpp" />
     <ClCompile Include="cweapon_assist.cpp" />
+    <ClCompile Include="c_batch_render.cpp" />
+    <ClCompile Include="c_batch_render_adjust.cpp" />
+    <ClCompile Include="c_batch_render_assist.cpp" />
+    <ClCompile Include="c_batch_render_effect.cpp" />
+    <ClCompile Include="c_batch_render_font.cpp" />
+    <ClCompile Include="c_batch_render_redsys.cpp" />
+    <ClCompile Include="c_batch_render_sprite.cpp" />
     <ClCompile Include="c_optionmenu.cpp" />
     <ClCompile Include="gamecore.cpp" />
     <ClCompile Include="cStg_Tronp.cpp" />
@@ -126,8 +134,8 @@
     <ClCompile Include="Load_Rifle.cpp" />
     <ClCompile Include="Load_ShotGun.cpp" />
     <ClCompile Include="Load_SMG.cpp" />
+    <ClCompile Include="Load_Support.cpp" />
     <ClCompile Include="winmain.cpp" />
-    <ClCompile Include="c_batch_preparat.cpp" />
     <ClCompile Include="ccamera.cpp" />
     <ClCompile Include="cenemy.cpp" />
     <ClCompile Include="citem_manipulate1.cpp" />
